2009-11-14  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: 名前付きでの設定インタフェイスを削除。コードの改善。

2009-11-13  Ebin <yutaka@ebine.org>

	* sabel/Bus.php: プロセッサINSERT用のメソッドinsertProcessor追加。

2009-11-12  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: Sabel_Containerのload()時に、複数の設定クラスを
	指定できるように変更。

2009-11-11  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: Sabel_AspectからStaticProxyを削除。

2009-11-10  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: get_mime_type()関数追加。それに応じて
	Sabel_Mail_Mime_Html::addImage()のMIMEタイプを省略できるように変更。

2009-11-10  Ebin <yutaka@ebine.org>

	* generator/skeleton/en/lib/form/Object.php: toHidden()メソッド追加（フォームの
	値を全てhiddenで書き出す）

2009-11-09  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: is_ipaddr()関数の正規表現を修正

2009-11-09  Hamaco  <hamanaka.kazuhiro@gmail.com>

	* Sabel.js: Sabel.Event.getTargetの返り値をSabel.Elementに変更
